Fixed ugly overflow on wide screens

--- a/website/style.css
+++ b/website/style.css
@@ -193,7 +193,9 @@ button:active {
 #big-icon-modal img {
 	width: 50vw;
 	height: 50vw;
-	object-fit: cover;
+	max-width: 80vh;
+	max-height: 80vh;
+	object-fit: fill;
 }
 
 /* footer */
